# citetracer

./: .gitignore  LICENSE  README.md  citation_verification_demo.py  config.example.json  config.json  pdf_extracter_demo.py  pdf_extractor_demo.py  pyproject.toml  requirements.txt
docs/: annotation_guidelines.md  architecture.md  evaluation_protocol.md  metric_guide.md  schema.md  taxonomy.md
results/: eval_H1_rule_based.json  eval_H4_rule_based.json  eval_H5_rule_based.json  eval_R1_plus_rule_based.json  eval_R1_rule_based.json  eval_R2_plus_rule_based.json  eval_R2_rule_based.json  eval_R3_plus_rule_based.json  eval_R3_rule_based.json  p3_probe.json
scripts/: audit_datasets.py  build_connector_response_db.py  build_dblp_sqlite.py  build_detailed_stats.py  clean_harvested_seeds.py  collect_non_academic_citations.py  convert_mutations_to_verification_input.py  dump_extraction_errors.py  eval_H_rule_based.sbatch  eval_H_rule_based.sh  eval_R_rule_based.sbatch  eval_R_rule_based.sh  fetch_arxiv_seed.py  find_natural_p3.py  fix_openalex_dois.py  gen_exhaustive_pdfs.py  generate_mutations.py  generate_pdf_samples.py  generate_synthetic_latex_fixture.py  harvest_seed_citations.py  prune_dead_non_academic_urls.py  reparse_from_ocr.py  reprocess_with_llm_merge.py  reverify_potential.py  revert_image_to_text_fields.py  run_arxiv_seed_smoke.py  score_all.py  score_extraction_clean.py  select_balanced_subset.py  split_mutations_by_code.py  test_bedrock_token.py  test_llm_reparse_on_artifacts.py  test_synthetic_samples.py  test_url_direct.py  test_web_search.py  (+2 more)
(+109 files in other folders)
