[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmpaperchecker"
version = "0.1.0"
description = "Citation hallucination checker for source and PDF manuscripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]

[tool.setuptools]
packages = ["apps", "apps.source_checker", "apps.pdf_checker", "packages", "packages.core", "packages.connectors", "packages.eval"]

[tool.pytest.ini_options]
pythonpath = ["."]
